# afl-1

./: CMakeLists.txt  hamming.c  hamming.h
